# trait

./: CMakeLists.txt  Position.cpp  Position.h  PositionUiTraits.cpp  PositionUiTraits.h  TraitsDemo.cpp  TraitsDouble.cpp  TraitsDouble.h  TraitsPrinter.cpp  TraitsPrinter.h  TraitsUnsigned.cpp  TraitsUnsigned.h  Traitses.h  UiTraitsDouble.cpp  UiTraitsUnsigned.cpp  WrappingVariantMaker.cpp  WrappingVariantMaker.h
IoTraits/: IoTraitsDecoder.cpp  IoTraitsDecoder.h  IoTraitsDouble.cpp  IoTraitsDouble.h  IoTraitsEncoder.cpp  IoTraitsEncoder.h  IoTraitsStreamer.cpp  IoTraitsStreamer.h  IoTraitsUnsigned.cpp  IoTraitsUnsigned.h
Position/: PositionIoTraits.cpp  PositionIoTraits.h  PositionUiTraits.h
Traits/: Traitses.cpp  Traitses.h
UiTraits/: UiTraitsDouble.cpp  UiTraitsDouble.h  UiTraitsPrinter.cpp  UiTraitsPrinter.h  UiTraitsUnsigned.h
Utilities/: TraitsDemo.cpp
